--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.tourist</groupId>
 	<artifactId>tourist-token</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>tourist-token</name>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>io.tourist</groupId>
 			<artifactId>tourist-core</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
